--- a/Metody Numeryczne 2019/Lecture 1 (errors and stuff)/Lecture  1.ipynb
+++ b/Metody Numeryczne 2019/Lecture 1 (errors and stuff)/Lecture  1.ipynb
@@ -47,14 +47,14 @@
     "\n",
     "## Elementy analizy numerycznej\n",
     "\n",
-    "### dr hab. inż. Jerzy Baranowski, Prof. nadzw.\n"
+    "### dr hab. inż. Jerzy Baranowski, Prof. AGH.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -132,12 +132,12 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "x \\land y & = xy & \\mathrm{Koniunkcja}\\\\\n",
-    "x \\lor y & = x+y-xy & \\mathrm{Alternatywa}\\\\\n",
-    "\\neg x & =1-x & \\mathrm{Negacja}\\\\\n",
-    "x \\rightarrow y & = (\\neg x\\lor y) & \\mathrm{Implikacja}\\\\\n",
-    "x \\oplus y & = (x \\lor y)\\land\\neg(x\\land y) & \\mathrm{EXOR}\\\\\n",
-    "x = y & = \\neg(x\\oplus y) & \\mathrm{Równoważność}\\\\\n",
+    "x \\land y & = xy & \\mathsf{Koniunkcja}\\\\\n",
+    "x \\lor y & = x+y-xy & \\mathsf{Alternatywa}\\\\\n",
+    "\\neg x & =1-x & \\mathsf{Negacja}\\\\\n",
+    "x \\rightarrow y & = (\\neg x\\lor y) & \\mathsf{Implikacja}\\\\\n",
+    "x \\oplus y & = (x \\lor y)\\land\\neg(x\\land y) & \\mathsf{EXOR}\\\\\n",
+    "x = y & = \\neg(x\\oplus y) & \\mathsf{Równoważność}\\\\\n",
     "\\end{align}\n",
     "$$"
    ]
@@ -362,6 +362,21 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Metody Numeryczne\n",
+    "\n",
+    "## Reprezentacja liczb wymiernych\n",
+    "\n",
+    "### dr hab. inż. Jerzy Baranowski, Prof. AGH."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -620,7 +635,11 @@
     }
    },
    "source": [
-    "# Błędy numeryczne"
+    "# Metody Numeryczne\n",
+    "\n",
+    "## Błedy numeryczne\n",
+    "\n",
+    "### dr hab. inż. Jerzy Baranowski, Prof. AGH."
    ]
   },
   {
@@ -952,6 +971,21 @@
     }
    },
    "source": [
+    "# Metody Numeryczne\n",
+    "\n",
+    "## Błędy zaokrągleń\n",
+    "\n",
+    "### dr hab. inż. Jerzy Baranowski, Prof. AGH."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "## Błędy zaokrągleń\n",
     "Kolejne nieusuwalne w pełni źródło błędów, nad którym mamy mniejszą kontrolę niż nad błędem metody"
    ]
@@ -1027,7 +1061,7 @@
     "- Single precision $\\varepsilon_m=2^{-24}\\approx 5.96\\cdot10^{-8}$\n",
     "- Double precision $\\varepsilon_m=2^{-52}\\approx 1.11\\cdot10^{-16}$\n",
     "\n",
-    "Przykład"
+    "### Przykład"
    ]
   },
   {
@@ -1335,7 +1369,249 @@
     }
    },
    "source": [
-    "# Analiza algorytmów numerycznych"
+    "# Przenoszenie się błędów zaokrągleń\n",
+    "Korzystając z rachunku różniczkowego (różniczkowa analiza błędów) możemy podać wzór na przenoszenie się błędów.\n",
+    "\n",
+    "Niech $y=\\varphi(x_1,\\ x_2,,\\ldots\\ x_n)$ będzie wielkością, którą chcemy obliczyć a $x_i$ są zaokrąglone z błędem $\\varepsilon_{x_i}$. Błąd względny wyliczania $y$ wynosi w przybliżeniu:\n",
+    "\n",
+    "$$\n",
+    "\\varepsilon_y = \\sum_{i=0}^n \\frac{x_i}{\\varphi(\\mathbf{x})}\n",
+    "\\cdot \\frac{\\partial\\varphi(\\mathbf{x})}{\\partial x_i}\\cdot\\varepsilon_{x_i}\n",
+    "$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Nieunikniony błąd obliczeń\n",
+    "Ze względu na zaokrąglenia pewnych błędów nigdy nie unikniemy. Nieunikniony błąd wartości składa się z błędu wyliczenia wartości (przeniesienia błędów) oraz samego błędu zaokrąglenia:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\Delta y}{y} = \\epsilon_y + \\mathrm{eps}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Przykład\n",
+    "Wyliczanie pierwiastka równania kwadratowego $y^2+2py-q=0$ o mniejszej wartości bezwzględnej:\n",
+    "$$ y=-p+\\sqrt{p^2+q} $$\n",
+    "można policzyć, że \n",
+    "$$\n",
+    "\\varepsilon_y=-\\frac{p}{\\sqrt{p^2-q}}\\varepsilon_p+\\frac{p+\\sqrt{p^2-q}}{2\\sqrt{p^2-q}}\\varepsilon_q\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Analiza błędu nieuniknionego\n",
+    "Ponieważ dla $q>0$ mamy\n",
+    "\n",
+    "$$\n",
+    "\\left|\\frac{p}{\\sqrt{p^2-q}}\\right|\\leq1,\\quad \\left|\\frac{p+\\sqrt{p^2-q}}{2\\sqrt{p^2-q}}\\right|\\leq1\n",
+    "$$\n",
+    "to wtedy mamy (przyjmując, że nie zachodzi $p^2\\approx q$)\n",
+    "$$\n",
+    "\\mathrm{eps}\\leq\\left|\\frac{\\Delta y}{y}\\right| = |\\epsilon_y + \\mathrm{eps}|\\leq 3 \\mathrm{eps}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Porównanie algorytmów\n",
+    "Rozpartrzmy dwa sposoby wyliczania $y$ dla $p$ i $q$ mniejszych od zera\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "s:={}&p^2\\\\\n",
+    "t:={}&s+q\\\\\n",
+    "u:={}&\\sqrt{t}\\\\\n",
+    "y:={}&-p+q\n",
+    "\\end{aligned}\n",
+    "\\quad \\quad \\quad \\quad\n",
+    "\\begin{aligned}\n",
+    "s:={}&p^2\\\\\n",
+    "t:={}&s+q\\\\\n",
+    "u:={}&\\sqrt{t}\\\\\n",
+    "v:={}&p+u\\\\\n",
+    "y:={}&q/v\n",
+    "\\end{aligned}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Algorytm 1\n",
+    "Podstawowym źródłem błędu będzie wzmocnienie błędu zaokrąglenia wyliczania pierwiastka z $t$ poprzez odejmowanie dwóch liczb przy wyliczaniu $y$\n",
+    "$$\\varepsilon_y=\\frac{p\\sqrt{p^2+q}+p^2+q}{q}\\varepsilon=\\kappa\\varepsilon$$\n",
+    "$\\kappa$ można oszacować z dołu, przez \n",
+    "$$\n",
+    "\\kappa>\\frac{2 p^2}{q} >0\n",
+    "$$\n",
+    "co oznacza, że dla małych $q$ błąd obliczeń będzie dużo większy niż błąd nieunikniony.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Algorytm 2\n",
+    "W tym algorytmie zakokrąglenie przez odejmowanie nie wystąpi\n",
+    "\n",
+    "$$\n",
+    "\\varepsilon_y = -\\frac{\\sqrt{p^2+q}}{p+\\sqrt{p^2+q}}\\varepsilon = \\kappa\\varepsilon\n",
+    "$$\n",
+    "w tym przypadku zawsze $|\\kappa|<1$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def algorytm_1(p,q):\n",
+    "    s=p**2\n",
+    "    t=s+q\n",
+    "    u=np.sqrt(t)\n",
+    "    return u-p\n",
+    "\n",
+    "def algorytm_2(p,q):\n",
+    "    s=p**2\n",
+    "    t=s+q\n",
+    "    u=np.sqrt(t)\n",
+    "    v=p+u\n",
+    "    return q/v"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Porównanie obliczeń"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "p=1000\n",
+    "q=0.018000000081\n",
+    "exact_sol=np.max(np.roots([1,2*p,-q]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "epsilon_1=np.abs((algorytm_1(p,q))-exact_sol)\n",
+    "eta_1=epsilon_1/np.abs(exact_sol)\n",
+    "epsilon_2=np.abs((algorytm_2(p,q))-exact_sol)\n",
+    "eta_2=epsilon_2/np.abs(exact_sol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Algorytm 1\n",
+      "8.999999977277184e-06\n",
+      "Algorytm 2\n",
+      "9e-06\n",
+      "Rozwiązanie dokładne\n",
+      "9e-06\n",
+      "Algorytm 1: Błąd bezwzględny   2.27e-14, Błąd względny   2.52e-09\n",
+      "Algorytm 2: Błąd bezwzględny   0.00e+00, Błąd względny   0.00e+00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Algorytm 1')\n",
+    "print(algorytm_1(p,q))\n",
+    "print('Algorytm 2')\n",
+    "print(algorytm_2(p,q))\n",
+    "print('Rozwiązanie dokładne')\n",
+    "print(exact_sol)\n",
+    "print(\"Algorytm 1: Błąd bezwzględny %10.2e, Błąd względny %10.2e\"%(epsilon_1,eta_1))\n",
+    "print(\"Algorytm 2: Błąd bezwzględny %10.2e, Błąd względny %10.2e\"%(epsilon_2,eta_2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Metody Numeryczne\n",
+    "\n",
+    "## Ocena algorytmów numerycznych\n",
+    "\n",
+    "### dr hab. inż. Jerzy Baranowski, Prof. AGH."
    ]
   },
   {
@@ -1455,6 +1731,21 @@
     "## Dokładność algorytmów stabilnych wstecznie przy złym uwarunkowaniu\n",
     "Jeśli algorytm jest stabilny wstecznie, to jego błąd względny pogarsza się proporcjonalnie do stałej uwarunkowania tj. $O(\\kappa\\varepsilon_m)$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Metody Numeryczne\n",
+    "\n",
+    "## Problemy techniczne\n",
+    "\n",
+    "### dr hab. inż. Jerzy Baranowski, Prof. AGH."
+   ]
   }
  ],
  "metadata": {
@@ -1474,7 +1765,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "rise": {
    "enable_chalkboard": true
