--- a/Metody Numeryczne 2020/9. Równania nieliniowe/pierwiastki.ipynb
+++ b/Metody Numeryczne 2020/9. Równania nieliniowe/pierwiastki.ipynb
@@ -751,19 +751,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "       4.1        -1.1       -0.56       -0.12       -0.44       -0.31  \n      -1.1         3.6          -1        0.38        -0.4       -0.45  \n     -0.56          -1           3       -0.49       -0.62        0.11  \n     -0.12        0.38       -0.49         3.3        -1.1        -1.7  \n     -0.44        -0.4       -0.62        -1.1         3.6        0.61  \n     -0.31       -0.45        0.11        -1.7        0.61         3.5  \n"
+      "       5.5         1.1       -0.58         0.7       -0.75       -0.44       -0.67       -0.51       -0.88  \n       1.1         6.2        -1.3        -1.5       -0.43        -0.7          -1        0.45       -0.59  \n     -0.58        -1.3         4.8       -0.71         0.3       0.095        -1.3       -0.49         0.9  \n       0.7        -1.5       -0.71           4        0.67        0.34        -1.5       -0.18      0.0051  \n     -0.75       -0.43         0.3        0.67         6.8        -0.3        -1.3        -1.9       -0.17  \n     -0.44        -0.7       0.095        0.34        -0.3         4.4       -0.89        0.15       -0.12  \n     -0.67          -1        -1.3        -1.5        -1.3       -0.89         5.8        -1.3       0.025  \n     -0.51        0.45       -0.49       -0.18        -1.9        0.15        -1.3         4.4       -0.25  \n     -0.88       -0.59         0.9      0.0051       -0.17       -0.12       0.025       -0.25         3.2  \n"
      ]
     }
    ],
    "source": [
-    "D = np.diag([*range(1,7)])\n",
+    "D = np.diag([*range(1,10)])\n",
     "P = np.random.random(D.shape)\n",
     "#macierz symetryczna\n",
     "Q,_ = np.linalg.qr(P)\n",
@@ -774,14 +774,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "         6     3.5e-16    -2.3e-16     8.5e-17    -8.1e-16    -3.5e-16  \n   1.9e-16           5    -7.2e-17       4e-17     1.6e-16       2e-18  \n   1.7e-38    -8.6e-23           4    -2.5e-16    -3.8e-17     1.6e-16  \n   1.9e-66    -9.1e-51     1.9e-29           3     2.9e-16    -3.4e-16  \n -7.1e-107     3.7e-91      -3e-68     3.9e-40           2     2.1e-16  \n  1.3e-173   -6.6e-158    2.5e-136    1.3e-108     3.3e-68           1  \nCałkowita liczba iteracji (klasyczny algorytm QR): 225\n"
+      "         9     7.1e-16     1.8e-16     1.7e-15     3.1e-16     1.8e-16      -1e-16    -1.8e-16     6.8e-16  \n     2e-16           8     3.9e-16     5.6e-16     2.5e-15    -9.5e-17    -2.1e-16    -1.5e-16     1.5e-16  \n   1.5e-34    -6.9e-20           7     8.8e-16    -6.4e-16    -2.1e-16     2.9e-16    -1.8e-16     6.9e-16  \n  -4.7e-54    -1.9e-38    -2.7e-20           6    -1.6e-15     1.5e-16       1e-15     3.5e-16    -7.5e-17  \n  -1.7e-78    -9.9e-64    -7.4e-45     3.8e-25           5     8.4e-17    -1.8e-16    -4.6e-17    -7.8e-16  \n -2.5e-110    -5.8e-94      -1e-75     2.1e-56    -2.4e-31           4     5.4e-16    -7.7e-18    -1.7e-16  \n -3.1e-148   -2.1e-132   -9.8e-114    -8.6e-94     1.9e-69     7.5e-40           3      -4e-16    -2.1e-16  \n    2e-202   -1.8e-186     -5e-168   -1.6e-148    8.3e-126     5.6e-94    -3.9e-55           2     8.6e-17  \n -1.6e-293    1.4e-277    3.9e-259    1.3e-239   -1.2e-216   -4.4e-185      3e-146    -7.9e-92           1  \nCałkowita liczba iteracji (klasyczny algorytm QR): 310\n"
      ]
     }
    ],
@@ -800,6 +800,133 @@
     "- Rozpoczyna od macierzy w postaci Hessenberga;\n",
     "- Wykorzystuje iterację ilorazu Rayleigha dla przyspieszenia zbieżności;\n",
     "- W momencie pojawienia się wartości bliskich zeru pod przekątną macierz jest rozdzielana na podproblemy.\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Przesunięcia\n",
+    "\n",
+    "Wykorzystujemy w każdej iteracji przybliżenie wartości własnej z ilorazu Rayleigha $\\mu_k$\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "Q_kR_k={}&A_{k-1}-\\mu_kI\\\\\n",
+    "A_k={}&R_kQ_k+\\mu_kI\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "Czyli robimy to samo co w klasycznym QR, ale przesuwamy wartości własne macierzy przed faktoryzacją i z powrotem do złożenia macierzy.\n",
+    "\n",
+    "Macierze $Q$ zbiegają do macierzy wektorów własnych, zaś przekątna macierzy $R$ do ilorazów Rayileigha. Dzięki temu jako element $\\mu_k$ wybieramy element z przekątnej."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.linalg import hessenberg\n",
+    "\n",
+    "def QR_deflation(INP):\n",
+    "    totalit=0\n",
+    "    A_rob=hessenberg(INP)\n",
+    "    m = INP.shape[0]\n",
+    "    for k in range(0,m-1):\n",
+    "        A_rob[0:m-k,0:m-k],it=qr_shift(A_rob[0:m-k,0:m-k])\n",
+    "        totalit+=it\n",
+    "    return A_rob, totalit\n",
+    "\n",
+    "def qr_shift(INP,maxit=101):\n",
+    "    A1=INP.copy()\n",
+    "    for k in range(1,maxit):\n",
+    "        mu=A1[-1,-1];\n",
+    "        Q,R=np.linalg.qr(A1-mu*np.eye(A1.shape[0]));\n",
+    "        A1= R @ Q+mu*np.eye(A1.shape[0]);\n",
+    "        if np.abs(A1[-1,-2]) < np.spacing(1):\n",
+    "            if np.linalg.norm(A1-A1.T) < np.spacing(1):\n",
+    "                A1[-2,-1]=0;\n",
+    "            A1[-1,-2]=0;\n",
+    "            return (A1,k)\n",
+    "    return (A1,k)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "         9    -5.2e-16    -1.1e-15     4.6e-16     4.3e-17     4.1e-16    -1.2e-16     7.2e-16      -2e-16  \n         0           1    -2.5e-15      -6e-16     8.2e-16    -6.7e-16    -1.1e-16     1.2e-16     2.7e-16  \n         0           0           8     7.2e-16    -9.2e-16       1e-15     1.4e-15    -1.4e-16     2.3e-16  \n         0           0           0           2    -6.8e-16     1.4e-15    -1.5e-16     7.8e-17      -1e-15  \n         0           0           0           0           7       3e-16    -1.3e-16    -1.5e-16    -7.1e-16  \n         0           0           0           0           0           6    -1.1e-15    -1.7e-16    -5.9e-16  \n         0           0           0           0           0           0           5     1.1e-15    -5.9e-16  \n         0           0           0           0           0           0           0           3     5.4e-16  \n         0           0           0           0           0           0           0           0           4  \nCałkowita liczba iteracji (QR z przesunięciami i deflacją): 31\n"
+     ]
+    }
+   ],
+   "source": [
+    "A_rob,totalit = QR_deflation(A)\n",
+    "matprint(A_rob,'10.2g')\n",
+    "print('Całkowita liczba iteracji (QR z przesunięciami i deflacją): '+str(totalit))"
+   ]
+  },
+  {
+   "source": [
+    "## Inne algorytmy wyznaczania wartości własnych\n",
+    "\n",
+    "- Divide-and-conquer - do wyznaczania wektorów i wartości własnych 2 razy szybszy od Algorytmu QR\n",
+    "- Algorytm Jacobiego - potencjalnie zrównoleglalny, podział na operacje na 2 wierszach i 2 kolumnach jednocześnie\n",
+    "- Algorytm bisekcji - służy do wyszukiwania części wartości własnych (np. największych 10%) macierzy symetrycznych"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Wykorzystanie wartości własnych do rozwiązywania równań nieliniowych\n",
+    "\n",
+    "Jeżeli możemy przybliżyć funkcję za pomocą interpolacji, to jej zera również powinny być dokładnie przybliżone.\n",
+    "\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Schemat postępowania\n",
+    "\n",
+    "1. Wyznaczyć stopień wielomianu interpolacyjnego\n",
+    "2. Wyznaczyć współczynniki szeregu Czebyszewa odpowiadającego wielomianowi\n",
+    "\n",
+    "$$ w(x)=\\sum_{i=0}^nc_iT_i(x) $$\n",
+    "\n",
+    "3. Wyznaczyć pierwiastki wielomianu, które są wartościami własnymi tzw. macierzy koleżeńskiej (collegue matrix)\n",
+    "\n",
+    "$$\n",
+    "C=\\left[\\begin{matrix}0&1&&&&\\\\[1ex]\n",
+    "\\frac{1}{2}&0&\\frac{1}{2}&&&\\\\[1ex]\n",
+    "&\\frac{1}{2}&0&\\frac{1}{2}&&\\\\[1ex]\n",
+    "&&\\ddots&\\ddots&\\ddots&\\\\[1ex]\n",
+    "&&&&&\\frac{1}{2}\\\\[1ex]\n",
+    "&&&&\\frac{1}{2}&0\n",
+    "\\end{matrix}\\right]\n",
+    "-\\cfrac{1}{2c_n}\n",
+    "\\begin{bmatrix}\n",
+    "&&&&&\\\\[1ex]\n",
+    "&&&&&\\\\[1ex]\n",
+    "&&&&&\\\\[1ex]\n",
+    "&&&&&\\\\[1ex]\n",
+    "&&&&&\\\\[1ex]\n",
+    "&&&&&\\\\[1ex]\n",
+    "c_0&c_1&c_2&\\ldots&c_{n-2}&c_{n-1}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "4. Wybrać te wartości własne, które są liczbami z przedziału interpolacji"
    ],
    "cell_type": "markdown",
    "metadata": {}
