--- a/Advanced databases/Lecture 1 (Introduction to database designed)/Lecture 1.ipynb
+++ b/Advanced databases/Lecture 1 (Introduction to database designed)/Lecture 1.ipynb
@@ -25,9 +25,9 @@
    },
    "source": [
     "## Organizational aspects\n",
-    "- C3 216, office hours: Thu. 11:00- 12:30\n",
+    "- C3 216, office hours: Mon. 8:00- 9:30\n",
     "- bauer@agh.edu.pl\n",
-    "- Final grade: 50% test, 50% project. Passing of laboratories required for attempting exam. \n",
+    "- Final grade: 50% test, 50% project.\n",
     "- Course materials, including lecture slides are available on [Github](https://github.com/KAIR-ISZ/public_lectures/tree/master/Advanced%20databases), if you see something wrong - make an issue."
    ]
   },
