--- a/Analiza i Bazy Danych/Lecture 7 (noSQL, Postgis)/Lecture 7 (noSQL, postgis).ipynb
+++ b/Analiza i Bazy Danych/Lecture 7 (noSQL, Postgis)/Lecture 7 (noSQL, postgis).ipynb
@@ -58,7 +58,7 @@
     }
    },
    "source": [
-    "# Wady realzyjnego modelu baz danych\n",
+    "# Wady realcyjnego modelu baz danych\n",
     "\n",
     "- Zorientowany na rekordy .\n",
     "\n",
@@ -115,7 +115,7 @@
     "# NoSQL początki\n",
     "\n",
     "- Nierelacyjne bazy danych opracowana w latach 60. XX wieku, \n",
-    "- Stosowane były do wyspecjalizowanych repozytoriach, na przykład w hierarchicznych usługach katalogowych. \n",
+    "- Stosowane były do wyspecjalizowanych repozytoriów, na przykład w hierarchicznych usługach katalogowych. \n",
     "\n",
     "- NoSQL powstał ponieważ  umożliwia tworzenie prostych projektów, horyzontalne skalowanie do klastrów maszyny (co jest problemem dla relacyjnych baz danych) i lepszą kontrolę nad dostępnością. "
    ]
@@ -259,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
