--- a/Narzędzia Pracy Grupowej/Wykład 1 (Wstęp)/wykład 1.ipynb
+++ b/Narzędzia Pracy Grupowej/Wykład 1 (Wstęp)/wykład 1.ipynb
@@ -25,7 +25,7 @@
    },
    "source": [
     "## Sprawy organizacyjne\n",
-    "- C3 216, godziny konsultacji: Czw. 11:00-12:30\n",
+    "- C3 216, godziny konsultacji: pon. 8:00 - 9:30\n",
     "- bauer@agh.edu.pl\n",
     "- Materiały do przedmiotu są dostępne na [Github](https://github.com/KAIR-ISZ/public_lectures/tree/master/Narzędzia%20Pracy%20Grupowej), Jeżeli zauważycie błedy proszę o założenie tematu na platformie Github."
    ]
@@ -76,7 +76,7 @@
    },
    "source": [
     "## Projekt zaliczeniowy\n",
-    "- Losowe zespoły pięcio osobowe\n",
+    "- Losowe zespoły do pięciu osób\n",
     "- Przygotowanie dokumentacji na podstawie otrzymanej specyfikacji\n",
     "- Podzielenie pracy w zespole\n",
     "- Realizacja projektu w systemie zarządzania zadaniami i wersjami"
