--- a/Narzędzia Pracy Grupowej/Wykład 2 (Role w zespole)/wykład 2.ipynb
+++ b/Narzędzia Pracy Grupowej/Wykład 2 (Role w zespole)/wykład 2.ipynb
@@ -24,7 +24,7 @@
     }
    },
    "source": [
-    "## Sprawy organizacyjne, lekkie modyfiakcje\n",
+    "## Zapisy\n",
     "\n",
     "- Konsultacje do projektów w formie maili - proszę tytuł zaczynać od \\[NPG\\]\n",
     "- Dane prowadzącym dostępu do przygotowywanych dokumentacji\n",
