--- a/Narzędzia Pracy Grupowej/Wykład 3 (Plan)/wykład 3.ipynb
+++ b/Narzędzia Pracy Grupowej/Wykład 3 (Plan)/wykład 3.ipynb
@@ -24,6 +24,19 @@
     }
    },
    "source": [
+    "## Zadanie na dzień dobry\n",
+    "\n",
+    "Proszę napisać instrukcję/plan prac zawieszenia zegara elektrycznego na scianie."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Czym jest plan?\n",
     "\n",
     "### Definicja ogólna\n",
@@ -83,6 +96,28 @@
     "- Ustalanie wymagań\n",
     "- Specyfikacja wymagań – tworzenie formalnego opisu wymagań\n",
     "- Atestacja (walidacji) wymagań – etap na którym odpowiadamy na pytanie czy wymagania są realne"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# <center>  Jak zadanie? </center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    " <center> <a href='https://www.youtube.com/watch?v=cDA3_5982h8'>Materiał poglądowy<a/> </center>"
    ]
   },
   {
@@ -334,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.6-final"
   },
   "rise": {
    "autolaunch": true,
