--- a/Analiza i Bazy Danych/Lecture 3 (key, normalization, index, view)/Lecture 3.ipynb
+++ b/Analiza i Bazy Danych/Lecture 3 (key, normalization, index, view)/Lecture 3.ipynb
@@ -75,7 +75,9 @@
     "## Rodzje kluczy \n",
     "\n",
     "1. Prosty - klucz składający się z jednej kolumny\n",
-    "1. Złożony - klucz składający się z wielu kolumn\n"
+    "1. Złożony - klucz składający się z wielu kolumn\n",
+    "1. Naturalny - klucz wynikający bezpośrednio ze struktury danych\n",
+    "1. Sztuczny - klucz wprowadzony do danych by łątwiej identyfikować krotki\n"
    ]
   },
   {
@@ -424,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
