--- a/Data Analytics/Lab 2 - Intro to stan/lab2.ipynb
+++ b/Data Analytics/Lab 2 - Intro to stan/lab2.ipynb
@@ -41,6 +41,13 @@
    ]
   },
   {
+   "source": [
+    "## Excercise 1 -  Generated Quantities Block"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
