--- a/Data Analytics/Lab 2 - Intro to stan/lab2.ipynb
+++ b/Data Analytics/Lab 2 - Intro to stan/lab2.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_quant = CmdStanModel(stan_file='GQblock.stan')\n"
+    "gen_quant = CmdStanModel(stan_file='code_1.stan')\n"
    ]
   },
   {
