--- a/Data Analytics/Lab 2 - Intro to stan/lab2.ipynb
+++ b/Data Analytics/Lab 2 - Intro to stan/lab2.ipynb
@@ -68,6 +68,33 @@
     "                            iter_warmup=0, \n",
     "                            chains = 1)"
    ]
+  },
+  {
+   "source": [
+    "## Excercise 2 - Constraints on the data "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bern1 = CmdStanModel(stan_file='code_2.stan')\n",
+    "samp_bern1 = bern1.sample(data={'N':2, 'y':[0,2]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bern2 = CmdStanModel(stan_file='code_3.stan')\n",
+    "samp_bern2 = bern2.sample(data={'N':2, 'y':[0,2]})"
+   ]
   }
  ]
 }
