--- a/Data Analytics/Lab 2 - Intro to stan/lab2.ipynb
+++ b/Data Analytics/Lab 2 - Intro to stan/lab2.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,6 +94,87 @@
    "source": [
     "bern2 = CmdStanModel(stan_file='code_3.stan')\n",
     "samp_bern2 = bern2.sample(data={'N':2, 'y':[0,2]})"
+   ]
+  },
+  {
+   "source": [
+    "## Excercise 3 - Constraints on parameters"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Unconstrained parameters"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_gm1 = CmdStanModel(stan_file='code_4.stan')\n",
+    "out_gamma1 = model_gm1.sample(output_dir='samples',iter_sampling=6000,iter_warmup=1000, seed=4838282)\n",
+    "out_gamma1.diagnose()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N=500\n",
+    "xs = np.linspace(0,8,N)\n",
+    "pdfs = stats.gamma.pdf(xs, 1.25, scale = 1 / 1.25) \n",
+    "\n",
+    "plt.plot(xs, pdfs, linewidth=2)\n",
+    "\n",
+    "## add histogram of theta samples with 160 bins\n",
+    "\n",
+    "plt.gca().set_xlabel(\"theta\")\n",
+    "plt.gca().set_ylabel(\"Probability Density Function\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "source": [
+    "### Constrained parameter"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_gm2 = CmdStanModel(stan_file='code_5.stan')\n",
+    "out_gamma2 = model_gm2.sample(output_dir='samples',iter_sampling=6000,iter_warmup=1000, seed=4838282)\n",
+    "out_gamma2.diagnose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N=500\n",
+    "xs = np.linspace(0,8,N)\n",
+    "pdfs = stats.gamma.pdf(xs, 1.25, scale = 1 / 1.25) \n",
+    "\n",
+    "plt.plot(xs, pdfs, linewidth=2)\n",
+    "\n",
+    "## add histogram of theta samples from the second model with 160 bins\n",
+    "\n",
+    "plt.gca().set_xlabel(\"theta\")\n",
+    "plt.gca().set_ylabel(\"Probability Density Function\")\n",
+    "plt.show()"
    ]
   }
  ]
