--- a/Data Analytics/Lab 2 - Intro to stan/lab2.ipynb
+++ b/Data Analytics/Lab 2 - Intro to stan/lab2.ipynb
@@ -176,6 +176,31 @@
     "plt.gca().set_ylabel(\"Probability Density Function\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "source": [
+    "## Excercise 4 -  Selection of parameters using equation solving\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_tune = CmdStanModel(stan_file='code_6.stan')\n",
+    "\n",
+    "F = # number of letters in the first name\n",
+    "L = # number of letters in the last name\n",
+    "y0 = # initial guess for the equation solving\n",
+    "\n",
+    "data={'y_guess':[y0],\n",
+    "        'theta':[(F+L)/2]}\n",
+    "tunes = model_tune.sample(data=data, fixed_param=True, iter_sampling=1, iter_warmup=0, chains = 1)"
+   ]
   }
  ]
 }
