--- a/Advanced databases/Lecture 2 (Creating database and normalization)/Lecture 2.ipynb
+++ b/Advanced databases/Lecture 2 (Creating database and normalization)/Lecture 2.ipynb
@@ -329,11 +329,11 @@
    },
    "source": [
     "## Books\n",
-    "| id \t| original_title \t| publication_date \t| original_language \t|\n",
-    "|:--:\t|:--------------:\t|:----------------:\t|:-----------------:\t|\n",
-    "|  1 \t|     Hamlet     \t|       1603       \t|      english      \t|\n",
-    "|  2 \t|    King Lear   \t|       1606       \t|      english      \t|\n",
-    "|  3 \t|    La Peste    \t|       1947       \t|       french      \t|"
+    " | id | id_authors| original_title \t| publication_date \t| original_language \t|\n",
+    "|:--:|\t:--:|:--------------:\t|:----------------:\t|:-----------------:\t|\n",
+    "|  1 |1\t|     Hamlet     \t|       1603       \t|      english      \t|\n",
+    "|  2 |1\t|    King Lear   \t|       1606       \t|      english      \t|\n",
+    "|  3 |2\t|    La Peste    \t|       1947       \t|       french      \t|"
    ]
   },
   {
