[ADB] korekty Lab 6 (Filtering data in SQLAlchemy)/lab6.md

--- a/Advanced databases/Lecture 4  (ACID)/Lecture4.ipynb
+++ b/Advanced databases/Lecture 4  (ACID)/Lecture4.ipynb
@@ -333,13 +333,23 @@
    },
    "source": [
     "## Atomicity translaction example\n",
+    "Correct\n",
     "\n",
     "|  Begin  \t|   X = 200   \t|   Y = 300   \t|\n",
     "|:-------:\t|:-----------:\t|:-----------:\t|\n",
     "| Execute \t|   Read(X)   \t|   Read(Y)   \t|\n",
     "|         \t| X = X - 100 \t| Y = Y + 100 \t|\n",
     "|  Commit \t|   Write(X)  \t|   Write(Y)  \t|\n",
-    "|  After  \t|   X = 100   \t|   Y = 400   \t|"
+    "|  After  \t|   X = 100   \t|   Y = 400   \t|\n",
+    "\n",
+    "Error:\n",
+    "\n",
+    "|  Begin  \t|   X = 200   \t|   Y = 300   \t|\n",
+    "|:-------:\t|:-----------:\t|:-----------:\t|\n",
+    "| Execute \t|   Read(X)   \t|   Read(Y)   \t|\n",
+    "|         \t| X = X - 's' \t| Y = Y + 100 \t|\n",
+    "|  Commit \t|   Write(X)  \t|   Write(Y)  \t|\n",
+    "|  After  \t|   X = 200   \t|   Y = 300   \t|"
    ]
   },
   {
