--- a/Narzędzia Pracy Grupowej/Wykład 5 (Metodyki prowadzenia projektów)/wykład 5.ipynb
+++ b/Narzędzia Pracy Grupowej/Wykład 5 (Metodyki prowadzenia projektów)/wykład 5.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "- Metodyka nastawiona na produkt.\n",
     "\n",
-    "- Produkt musi wypracować minimum zamierzone korzyści dla przedsiębiorstwa.\n"
+    "- Produkt musi wypracować minimum zamierzonych korzyści dla przedsiębiorstwa.\n"
    ]
   },
   {
@@ -384,7 +384,7 @@
     }
    },
    "source": [
-    "## Knban optymalizacja pracy \n",
+    "## Kanban optymalizacja pracy \n",
     "\n",
     "- Żadnych braków\n",
     "- Żadnych zapasów\n",
