[ADB] add lab7.md

--- a/Advanced databases/Lecture 4  (ACID)/Lecture4.ipynb
+++ b/Advanced databases/Lecture 4  (ACID)/Lecture4.ipynb
@@ -493,7 +493,7 @@
     "| UPDATE authors SET name = \"W.\" WHERE id = 1; \t|                                                  \t|\n",
     "|                    COMMIT                    \t|                                                  \t|\n",
     "|    SELECT name FROM authors WHERE id = 1;    \t|                                                  \t|\n",
-    "|                  -- name = W                 \t|                      COMMIT                      \t|\n",
+    "|                  -- name = W.                 \t|                      COMMIT                      \t|\n",
     "|                                              \t|      SELECT name FROM authors WHERE id = 1;      \t|\n",
     "|                                              \t|                 -- name = Willie                 \t|\n",
     "|    SELECT name FROM authors WHERE id = 1;    \t|                                                  \t|\n",
