[DA] Updating to cmdstanpy

--- a/Data Analytics/Topic 6 - Linear models/Kung_people/Kung_people.ipynb
+++ b/Data Analytics/Topic 6 - Linear models/Kung_people/Kung_people.ipynb
@@ -14,10 +14,10 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../../Utilities')\n",
+    "sys.path.append('../../Utilities/src')\n",
     "\n",
-    "import pystan\n",
-    "import stan_utility\n",
+    "from cmdstanpy import CmdStanModel\n",
+    "\n",
     "\n",
     "import arviz as az\n",
     "import numpy as np\n",
@@ -44,6 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "from DA_tools import ribbon_plot, light, light_highlight, mid, mid_highlight, dark, dark_highlight\n"
    ]
   },
