--- a/Data Analytics/Lab 2 - Intro to stan/lab2.ipynb
+++ b/Data Analytics/Lab 2 - Intro to stan/lab2.ipynb
@@ -221,8 +221,8 @@
     "data = {'N': F}\n",
     "seed = #integer, your date of birth in the DDMMYYYY format without leading zero (or if you are GPRD weary, use any other date you wish)\n",
     "result_1 = model_samp_st.sample(data=data,seed=seed)\n",
-    "result_2 = model_log_target.sample(data=data,seed=seed)\n",
-    "result_3 = model_log_target_ind.sample(data=data,seed=seed)\n",
+    "result_2 = model_log_target(data=data,seed=seed)\n",
+    "result_3 = model_log_target_ind(data=data,seed=seed)\n",
     "\n"
    ]
   },
@@ -249,7 +249,7 @@
     "# fill in with chosen result from previous excercise\n",
     "mean_of_y = model_gq.generate_quantities(data=data,\n",
     "                                        mcmc_sample = )\n",
-    "# investigate the output and plot histogram of mean_y variable"
+    "# investigate the output and plot histogram of mean_y variableŌ"
    ],
    "cell_type": "code",
    "metadata": {},
