[ADB] Lecture 6 poprawki

--- a/Advanced databases/Lecture 6(Data Query Language - DQL)/Lecture6.ipynb
+++ b/Advanced databases/Lecture 6(Data Query Language - DQL)/Lecture6.ipynb
@@ -78,7 +78,8 @@
     "FROM tableName [alias] \n",
     "[WHERE condition]\n",
     "[GROUP BY fieldName(s)]  \n",
-    "[HAVING condition] ORDER BY fieldName(s)\n",
+    "[HAVING condition] \n",
+    "[ORDER BY fieldName(s)]\n",
     "```"
    ]
   },
@@ -871,7 +872,7 @@
     "\n",
     "```sql\n",
     "select * from (select first_name, last_name from actor where length(first_name) < 3) tmp_actor \n",
-    "where length(tmp_actor.first_name) < 3;\n",
+    "where length(tmp_actor.last_name) < 6;\n",
     "```\n",
     "\n",
     "Result:\n",
@@ -879,9 +880,7 @@
     "| first_name \t|  last_name  \t|\n",
     "|:----------:\t|:-----------:\t|\n",
     "|\"Ed\"|\t\"Chase\"|\n",
-    "|\"Ed\"|\t\"Mansfield\"|\n",
-    "|\"Al\"|\t\"Garland\"|\n",
-    "|\"Ed\"|\t\"Guiness\"|\n"
+    "\n"
    ]
   },
   {
