[ABD] add lab 10

--- a/Advanced databases/Lecture 8(Like and Similar to, group by, aggregation function, set operations)/Lecture8.ipynb
+++ b/Advanced databases/Lecture 8(Like and Similar to, group by, aggregation function, set operations)/Lecture8.ipynb
@@ -760,7 +760,7 @@
     " join film_category fa using(film_id) \n",
     " join category c using (category_id) \n",
     " where name = 'Comedy' order by title limit 5)\n",
-    "Intersect\n",
+    "intersect\n",
     "(select  name, title from film f \n",
     " join film_category fa using(film_id) \n",
     " join category c using (category_id) \n",
