[ADB] add lab 11

--- a/Advanced databases/Lecture 9(Function, user menagment, view )/Lecture9.ipynb
+++ b/Advanced databases/Lecture 9(Function, user menagment, view )/Lecture9.ipynb
@@ -1034,7 +1034,7 @@
     "\n",
     "Stopr use role context:\n",
     "```sql\n",
-    "RESET ROLE role_name;\n",
+    "RESET ROLE;\n",
     "```\n"
    ]
   },
