[DA] Exam questions

--- a/Data Analytics/Topic 2 - bayesian basics/Lecture 2.ipynb
+++ b/Data Analytics/Topic 2 - bayesian basics/Lecture 2.ipynb
@@ -28,7 +28,8 @@
     "\n",
     "$$ \\underbrace{p(\\theta|y)}_{\\mathrm{posterior}}\\propto \n",
     "\\underbrace{p(\\theta)}_{\\mathrm{prior}}\n",
-    "\\underbrace{p(y|\\theta)}_{\\mathrm{likelihood}}$$\n"
+    "\\underbrace{p(y|\\theta)}_{\\mathrm{likelihood}}\n",
+    "$$\n"
    ]
   },
   {
